--- a/anime.html
+++ b/anime.html
@@ -54,10 +54,10 @@
             </div>
         </div>
                 <div class="navbar-nav w-100">
-                    <a href="dash" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
-                    <a href="download" class="nav-item nav-link"><i class="fa fa-download me-2"></i>Download</a>
+                    <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+                    <a href="download.html" class="nav-item nav-link"><i class="fa fa-download me-2"></i>Download</a>
                     <a href="anime.html" class="nav-item nav-link active"><i class="fa fa-download me-2"></i>AnimeManga</a>
-                    <a href="search" class="nav-item nav-link"><i class="fa fa-download me-2"></i>Search</a>
+                    <a href="search.html" class="nav-item nav-link"><i class="fa fa-download me-2"></i>Search</a>
                         </div>
                     </div>
                 </div>
