--- a/download.html
+++ b/download.html
@@ -115,7 +115,7 @@
                                         <td>Download YouTube video</td>
                                         <td>url</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/youtube?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/youtube?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
                                         <th scope="row">2</th>
@@ -124,43 +124,43 @@
                                         <td>Download YouTube video up to 1080p60</td>
                                         <td>url</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/youtube2?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/youtube2?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">2</th>
+                                        <th scope="row">3</th>
                                         <td>TikTok</td>
                                         <td>Json</td>
                                         <td>Download TikTok video no watermark</td>
                                         <td>url</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/tiktok?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/tiktok?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">2</th>
+                                        <th scope="row">4</th>
                                         <td>Instagram</td>
                                         <td>Json</td>
                                         <td>Download Instagram reels/post</td>
                                         <td>url</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/instagram?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/instagram?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">2</th>
+                                        <th scope="row">5</th>
                                         <td>NHentai PDF</td>
                                         <td>Json</td>
                                         <td>NHentai PDF Downloader</td>
                                         <td>id</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/nhentaipdf?id=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/nhentaipdf?id=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">2</th>
+                                        <th scope="row">6</th>
                                         <td>Spotify</td>
                                         <td>Json</td>
                                         <td>Download Spotify track</td>
                                         <td>url</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/spotify?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/spotify?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <!-- Add more rows as needed -->
                                 </tbody>
