--- a/anime.html
+++ b/anime.html
@@ -115,7 +115,7 @@
                                         <td>Get info about NHentai code</td>
                                         <td>id</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/nhentai?id=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/nhentai?id=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                 </tbody>
                             </table>
