--- a/search.html
+++ b/search.html
@@ -115,25 +115,25 @@
                                         <td>Search & Download YouTube video from query</td>
                                         <td>id</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/ytsv?q=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/ytsv?q=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">1</th>
+                                        <th scope="row">2</th>
                                         <td>YouTube Search Audio</td>
                                         <td>Json</td>
                                         <td>Search & Download YouTube audio from query</td>
                                         <td>id</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/ytsa?q=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/ytsa?q=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">1</th>
+                                        <th scope="row">3</th>
                                         <td>YouTube Search</td>
                                         <td>Json</td>
                                         <td>Search video from YouTube</td>
                                         <td>id</td>
                                         <td><span class="badge bg-success">Active</span></td>
-                                        <td><a href="https://ekushi.xyz/api/yts?q=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                        <td><a href="https://api.ekushi.xyz/api/yts?q=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                 </tbody>
                             </table>
