--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
     <script>
         function fetchStats() {
-            fetch('https://api.ekushi.xyz/stats/ekushi')
+            fetch('https://api.ekushi.xyz/stats')
                 .then(response => response.json())
                 .then(data => {
                     console.log('Fetched Data:', data); // Debugging: log the fetched data
