--- a/search.html
+++ b/search.html
@@ -57,7 +57,7 @@
                     <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <a href="download.html" class="nav-item nav-link"><i class="fa fa-download me-2"></i>Download</a>
                     <a href="anime.html" class="nav-item nav-link"><i class="fa fa-download me-2"></i>AnimeManga</a>
-                    <a href="anime.html" class="nav-item nav-link active"><i class="fa fa-magnifying-glass me-2"></i>Search</a>
+                    <a href="anime.html" class="nav-item nav-link active"><i class="fa-solid fa-magnifying-glass"></i>Search</a>
                         </div>
                     </div>
                 </div>
