--- a/ai.html
+++ b/ai.html
@@ -48,8 +48,8 @@
                     <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
                     <a href="download.html" class="nav-item nav-link"><i class="fa fa-download me-2"></i>Download</a>
                     <a href="anime.html" class="nav-item nav-link"><i class="fa fa-film me-2"></i>AnimeManga</a>
-                    <a href="ai.html" class="nav-item nav-link"><i class="fa fa-robot me-2"></i>Ai</a>
-                    <a href="search.html" class="nav-item nav-link active"><i class="fa fa-search me-2"></i>Search</a>
+                    <a href="ai.html" class="nav-item nav-link active"><i class="fa fa-robot me-2"></i>Ai</a>
+                    <a href="search.html" class="nav-item nav-link"><i class="fa fa-search me-2"></i>Search</a>
                         </div>
                     </div>
                 </div>
