--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             }
         } catch (error) {
             console.error('Error fetching currently playing track:', error);
-            document.getElementById('spotify-now-playing').innerHTML = 'Error fetching track information.';
+            document.getElementById('spotify-now-playing').innerHTML = 'No music currently playing';
         }
     }
     
