--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="row g-4">
         <div class="col-12">
             <div class="bg-secondary rounded p-4">
-                <h6 class="mb-4">Music Player</h6>
+                <h6 class="mb-4">Now Playing</h6>
                 <iframe 
                     src="https://nowplayi.ng/miniplayer.php?refreshToken=AQC5WefPiG2nNTLvgr4Eqac8KZAVMkcoAeNeowFj2QkuzsHrIJ-IEXxyoilKn5UrrczZhhieC9JRo01CPegTIJeOX5W7Z8zx8SVs321xv9ZjQ_xp4FqrwdvDmBYqfNlUiKw&showAlbum=true&showArtwork=true&showProgress=true&showPause=true&transparentBackground=false&hideOnPauseOrEmpty=false" 
                     width="100%" 
