--- a/index.html
+++ b/index.html
@@ -183,8 +183,10 @@
                 <div class="d-flex align-items-center border-bottom py-2">
                     <div class="w-100 ms-3">
                         <div class="d-flex w-100 align-items-center justify-content-between">
-                            <span>Ai Menu</span>
+                            <span>Adding Ai Menu</span>
+                            <div class="d-flex w-100 align-items-center justify-content-between">
                             <span>Youtube Downloader Fixed</span>
+                                <div class="d-flex w-100 align-items-center justify-content-between">
                             <span>Changing Interface</span>
                         </div>
                     </div>
