--- a/download.html
+++ b/download.html
@@ -115,6 +115,15 @@
                                         <td><a href="https://api.ekushi.xyz/api/youtube2?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
+                                        <th scope="row">6</th>
+                                        <td>Ytmp3</td>
+                                        <td>Json</td>
+                                        <td>Download YouTube audio/mp3</td>
+                                        <td>url</td>
+                                        <td><span class="badge bg-success">Active</span></td>
+                                        <td><a href="https://api.ekushi.xyz/api/ytmp3?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                    </tr>
+                                    <tr>
                                         <th scope="row">3</th>
                                         <td>TikTok</td>
                                         <td>Json</td>
