--- a/download.html
+++ b/download.html
@@ -159,6 +159,15 @@
                                         <td><span class="badge bg-success">Active</span></td>
                                         <td><a href="https://api.ekushi.xyz/api/spotify?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
+                                    <tr>
+                                        <th scope="row">7</th>
+                                        <td>GoFile</td>
+                                        <td>Json</td>
+                                        <td>Get GoFile File Link</td>
+                                        <td>url</td>
+                                        <td><span class="badge bg-success">Active</span></td>
+                                        <td><a href="https://api.ekushi.xyz/api/gofile?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
