--- a/download.html
+++ b/download.html
@@ -115,7 +115,7 @@
                                         <td><a href="https://api.ekushi.xyz/api/youtube2?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">6</th>
+                                        <th scope="row">3</th>
                                         <td>Ytmp3</td>
                                         <td>Json</td>
                                         <td>Download YouTube audio/mp3</td>
@@ -124,7 +124,7 @@
                                         <td><a href="https://api.ekushi.xyz/api/ytmp3?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">3</th>
+                                        <th scope="row">4</th>
                                         <td>TikTok</td>
                                         <td>Json</td>
                                         <td>Download TikTok video no watermark</td>
@@ -133,7 +133,7 @@
                                         <td><a href="https://api.ekushi.xyz/api/tiktok?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">4</th>
+                                        <th scope="row">5</th>
                                         <td>Instagram</td>
                                         <td>Json</td>
                                         <td>Download Instagram reels/post</td>
@@ -142,7 +142,25 @@
                                         <td><a href="https://api.ekushi.xyz/api/instagram?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">5</th>
+                                        <th scope="row">6</th>
+                                        <td>Instagram 2</td>
+                                        <td>Json</td>
+                                        <td>Download Instagram reels/post [Backup]</td>
+                                        <td>url</td>
+                                        <td><span class="badge bg-success">Active</span></td>
+                                        <td><a href="https://api.ekushi.xyz/api/instagram2?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">7</th>
+                                        <td>All In One</td>
+                                        <td>Json</td>
+                                        <td>All In One downloader</td>
+                                        <td>url</td>
+                                        <td><span class="badge bg-success">Active</span></td>
+                                        <td><a href="https://api.ekushi.xyz/api/aio?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">8</th>
                                         <td>NHentai PDF</td>
                                         <td>Json</td>
                                         <td>NHentai PDF Downloader</td>
@@ -151,7 +169,7 @@
                                         <td><a href="https://api.ekushi.xyz/api/nhentaipdf?id=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">6</th>
+                                        <th scope="row">9</th>
                                         <td>Spotify</td>
                                         <td>Json</td>
                                         <td>Download Spotify track</td>
@@ -160,7 +178,7 @@
                                         <td><a href="https://api.ekushi.xyz/api/spotify?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">7</th>
+                                        <th scope="row">10</th>
                                         <td>GoFile</td>
                                         <td>Json</td>
                                         <td>Get GoFile File Link</td>
