--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <script>
         function fetchStats() {
-            fetch('https://api.ekushi.xyz/statistic')
+            fetch('https://api.ekushi.xyz/stats/ekushi')
                 .then(response => response.json())
                 .then(data => {
                     console.log('Fetched Data:', data);
