--- a/download.html
+++ b/download.html
@@ -186,6 +186,15 @@
                                         <td><span class="badge bg-success">Active</span></td>
                                         <td><a href="https://api.ekushi.xyz/api/gofile?url=" class="btn btn-outline-primary btn-sm">View</a></td>
                                     </tr>
+                                    <tr>
+                                        <th scope="row">11</th>
+                                        <td>NicoNico</td>
+                                        <td>Json</td>
+                                        <td>NicoNico Video Downloader</td>
+                                        <td>url</td>
+                                        <td><span class="badge bg-success">Active</span></td>
+                                        <td><a href="https://api.ekushi.xyz/api/nicovid?url=" class="btn btn-outline-primary btn-sm">View</a></td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
