--- a/download.html
+++ b/download.html
@@ -109,7 +109,7 @@
                                         <th scope="row">2</th>
                                         <td>Youtube 2</td>
                                         <td>Direct</td>
-                                        <td>Download YouTube video up to 1080p60</td>
+                                        <td>BROKEN ( I DONT HAVE TIME TO FIX RN )</td>
                                         <td>url</td>
                                         <td><span class="badge bg-success">Active</span></td>
                                         <td><a href="https://api.ekushi.xyz/api/youtube2?url=" class="btn btn-outline-primary btn-sm">View</a></td>
@@ -118,7 +118,7 @@
                                         <th scope="row">3</th>
                                         <td>Ytmp3</td>
                                         <td>Json</td>
-                                        <td>Download YouTube audio/mp3</td>
+                                        <td>BROKEN ( I DONT HAVE TIME TO FIX RN )</td>
                                         <td>url</td>
                                         <td><span class="badge bg-success">Active</span></td>
                                         <td><a href="https://api.ekushi.xyz/api/ytmp3?url=" class="btn btn-outline-primary btn-sm">View</a></td>
